- update content project detail en

--- a/src/en/projectdetail/minh-anh-park-hill-cu-chi-en.ejs
+++ b/src/en/projectdetail/minh-anh-park-hill-cu-chi-en.ejs
@@ -68,43 +68,45 @@
                 <div class="project-detail">
                   <div class="grid_section">
                     <div class="section_inner">
-                      <p><strong>Minh Anh Park Hill</strong> của <strong> Công ty Cổ phần Đầu tư Công nghệ Minh Anh</strong> có diện tích khoảng 2,2 ha tọa lạc trên địa phận xã Hòa Phú, Huyện Củ Chi thuộc Thành phố Hồ Chí Minh. Theo quy hoạch, <strong>Minh Anh Park Hill</strong> sẽ là dự án tổ hợp dịch vụ, thương mại, văn hóa và vui chơi giải trí tại khu vực Tây Bắc Sài Gòn.</p>
+                      <p><strong>Minh Anh Park Hill</strong>, developed by <strong> Minh Anh Technology Investment Joint Stock Company</strong> , covers an area of approximately 2.2 hectares situated in Hoa Phu Commune, Cu Chi District, Ho Chi Minh City. According to the master plan, <strong>Minh Anh Park Hill</strong> will be a mixed-use project comprising of service, commercial, cultural, and recreational facilities in the Northwest Saigon area.</p>
                       <p style="text-align:center"><img alt="" src="/assets/img/bds/minhanh_cuchi_duan.PNG"></p>
-                      <p style="text-align:center"><span style="font-size:12px"><em>Dự án Khu dân cư Minh Anh Park Hill</em></span></p>
-                      <h5><span style="color:#0000FF"><strong>I. GIỚI THIỆU&nbsp;DỰ ÁN MINH ANH PARK HILL</strong></span></h5>
+                      <p style="text-align:center"><span style="font-size:12px"><em>Minh Anh Park Hill Residential Area</em></span></p>
+                      <h5><span style="color:#0000FF"><strong>I. MINH ANH PARK HILL PROJECT</strong></span></h5>
                         </br>
-                      <p>- Tên dự án:&nbsp;<strong>Minh Anh Park Hill</strong></p>
-                      <p>- Vị trí: Tỉnh lộ 8, xã Hòa Phú, Huyện Củ Chi, Thành phố Hồ Chí Minh, Việt Nam</p>
-                      <p>- Chủ đầu tư: <strong>Công ty Cổ phần Đầu tư Công nghệ Minh Anh</strong></p>
-                      <p>- Đơn vị tư vấn thiết kế: Công ty TNHH Tư vấn Thiết kế Xây dựng Sài Gòn QTK</p>
-                      <p>- Đơn vị phân phối chính: </p>
-                      <p>- Tổng diện tích: 2,2 ha</p>
-                      <p>- Mật độ xây dựng: 40%</p>
-                      <p>- Số lượng nhà phố: 163 căn</p>
-                      <p>- Loại hình sản phẩm đa dạng: từ Khu Nhà liên kế, nhà phố thương mại, shophouse.</p>
-                      <p>- Không gian xanh: khuôn viên cây xanh, tiểu cảnh, hồ nước,…</p>
+                        <p>- Project name:&nbsp;<strong>Minh Anh Park Hill</strong></p>
+                        <p>- Location: Provincial Road 8, Hoa Phu Commune, Cu Chi District, Ho Chi Minh City, Vietnam</p>
+                        <p>- Developer: <strong>Minh Anh Technology Investment Joint Stock Company</strong></p>
+                        <p>- Design consultant: Saigon QTK Construction Design Consultancy Company Limited</p>
+                        <p>- Main distributor: </p>
+                        <p>- Total area: 2.2 hectares</p>
+                        <p>- Building density: 40%</p>
+                        <p>- Number of townhouses: 163 units</p>
+                        <p>- Diverse product types: including Townhouse Cluster, Commercial Townhouse, Shophouse.</p>
+                        <p>- Green space: green trees, landscapes, water pond,...</p>
                         </br>
-                      <p><strong>Ưu điểm vượt trội của Dự án Minh Anh Park Hill:</strong></p>
+                      <p><strong>Advantages of Minh Anh Park Hill Project:</strong></p>
                         </br>
-                      <p>- Đây là một dòng sản phẩm có giá bán hợp với túi tiền của nhiều dân cư có thu nhập trung bình.</p>
-                      <p>- Chủ đầu tư uy tín, có thương hiệu, tiềm lực tài chính tốt và có kinh nghiệm trong phát triển bất động sản.</p>
-                      <p>- Dù là những nhà liên kế, nhà phố thương mại, shophouse Củ Chi giá thấp hơn so với nhiều dự án khác nhưng về mặt chất lượng và tiện ích cũng được đồng bộ không kém gì những dự án nhà phố, nhà ở cao cấp.</p>
+                      <p>- This product line offers prices that are suitable for the budget of many middle-income residents.</p>
+                      <p>- The developer is reputable, well-established, financially strong, and experienced in real estate development.</p>
+                      
+                      <p>- Despite being townhouses, commercial townhouses, and shophouses in Cu Chi with lower prices compared to many other projects, the quality and amenities are equally well-integrated, not inferior to high-end townhouse and residential projects.</p>
                       <!-- <p style="text-align:center"><img alt="" src="/assets/img/bds/minhanh_cuchi_phoicanh.PNG"></p>
                       <p style="text-align:center"><span style="font-size:12px"><em>Phối cảnh Dự án Minh Anh park Hill</em></span></p> -->
 
                         </br>
-                      <h5><span style="color:#0000FF"><strong>II. VỊ TRÍ DI CHUYỂN, HỆ THỐNG GIAO THÔNG TẠI CỦ CHI</strong></span></h5>
+                      <h5><span style="color:#0000FF"><strong>II. LOCATION AND TRANSPORTATION SYSTEM IN CU CHI</strong></span></h5>
                         </br>
-                      <p><strong>Dự án Minh Anh Park Hill</strong> tọa lạc tại tỉnh lộ 8, thuộc khu vực Tây Bắc của TP. Hồ Chí Minh tạo thành trục tam giác vàng TP HCM – Bình Dương – Tây Ninh. Những tuyến đường huyết mạch xung quanh dự án như quốc lộ 1A, Quốc lộ 22, tỉnh lộ 8, đường Võ Văn Bích, tỉnh lộ 9… tạo cho dự án có vị thế đắc địa khi đây là khu vực được quy hoạch mở rộng để sẵn sàng cho việc bùng nổ dân số và hàng loạt tiện ích được xây dựng trong những năm tới nhằm biến Củ Chi thành điểm đến được lựa chọn đầu tiên an cư, đầu tư của các tập đoàn lớn trong và ngoài nước.</p>
-                      <p>Tuy xa trung tâm nhưng <strong>Khu Dân cư Minh Anh Park Hill</strong> lại thuộc khu vực phát triển nhanh chóng, kết cấu hạ tầng dần hoàn thiện đồng bộ đáp ứng đầy đủ nhu cầu đi lại, kinh tế tập trung của tổ hợp công nghiệp.</p>
+                      <p><strong>Minh Anh Park Hill project</strong> is located on provincial road 8, in the Northwest area of Ho Chi Minh City, forming the golden triangle axis of Ho Chi Minh City - Binh Duong - Tay Ninh. The project benefits from the surrounding major arterial roads such as National Highway 1A, National Highway 22, provincial road 8, Vo Van Bich street, provincial road 9, which gives it a strategic location. This area is planned for expansion to accommodate the increasing population and the development of various amenities in the coming years, making Cu Chi an attractive choice for settling down and investing for both domestic and foreign conglomerates.</p>
+                        </br>
+                      <p>Although it is far from the city center, <strong>Minh Anh Park Hill Residential Area</strong> is situated in a rapidly developing region with gradually improving infrastructure to meet the transportation and economic demands of the industrial complex.</p>
                       
                         </br>
-                      <h5><span style="color:#0000FF"><strong>III. TIỆN ÍCH XUNG QUANH DỰ ÁN MINH ANH PARK HILL</strong></span></h5>
+                      <h5><span style="color:#0000FF"><strong>III. SURROUNDING AMENITIES OF MINH ANH PARK HILL PROJECT</strong></span></h5>
                         </br>
-                      <p>Theo quy hoạch, nhiều khu giải trí tầm cỡ quốc tế được mở ra tại <strong>Củ Chi</strong>. Hiện tại, khu đô thị Tây Bắc <strong>6.000ha</strong> đang triển khai xây dựng. Công viên Quốc tế Tân Phú Trung quy mô 300ha, làng Đại Học Quốc Tế diện tích 1.000ha tại Tân Phú Trung, Thảo Cầm Viên 500ha tại An Nhơn Tây… và khách sạn, nhà hàng đang mọc ra ngày càng nhiều…</p>
+                      <p>According to the urban planning, numerous international-scale entertainment areas are being developed in <strong>Cu Chi</strong>. Currently, the Northwest urban area of <strong>6.000</strong> hectares is under construction. There are plans for the 300-hectare Tan Phu Trung International Park, the 1,000-hectare International University Village in Tan Phu Trung, the 500-hectare Thao Cam Vien (Zoological and Botanical Garden) in An Nhon Tay, as well as an increasing number of hotels and restaurants in the vicinity…</p>
                       <p style="text-align:center"><img alt="" src="/assets/img/bds/minhanh_cuchi_tienich.PNG"></p>
-                      <p style="text-align:center"><span style="font-size:12px"><em>Tiện ích kết nối khu vực của Minh Anh Park Hill</em></span></p>
-                      <p>Bên cạnh đó, dự kiến sẽ có khoảng 30 trường Đại Học dời về Củ Chi và mỗi trường sẽ cần khoảng 10 đến 30ha đất. Đồng thời với điều đó sẽ có khoảng 30 bệnh viện với quy mô lớn nhỏ khác nhau sẽ được xây dựng mới tại Củ Chi và chỉ có Củ Chi mới đủ diện tích “đất sạch” với cảnh quan phong thủy phù hợp với người Á Đông và tiêu chuẩn quốc tế. Xung quanh là những tiện ích ngoại khu hiện hữu như chợ, siêu thị, trung tâm hành chính, UBND, trung tâm thương mại, siêu thị, trường học, bệnh viện,…Chính vì những tiện nghi “vàng” mà <strong>khu dân cư Minh Anh Park Hill </strong> được hưởng lợi trong tương lai</p>
+                      <p style="text-align:center"><span style="font-size:12px"><em>Conveniences connecting the area of Minh Anh Park Hill</em></span></p>
+                      <p>In addition, it is expected that around 30 universities will be relocated to Cu Chi, and each university will require approximately 10 to 30 hectares of land. Along with that, there are plans for about 30 hospitals of various sizes to be newly built in Cu Chi, and only Cu Chi has enough "clean land" with a suitable feng shui landscape for Asian people and international standards. Surrounding the area are existing external amenities such as markets, supermarkets, administrative centers, People's Committees, shopping centers, schools, hospitals, etc. Thanks to these "golden" facilities, <strong>the residential area of Minh Anh Park Hill</strong> will benefit greatly in the future.</p>
                         </br>
                       <div class="bg_lienketvung">
                         <div class="row row-full-width align-middle align-center">
@@ -121,31 +123,32 @@
                           <div style="max-width: 45%;" class="col small-12 large-6 medium-12">
                             <div class="col-inner text-lienketvung"
                               style="max-width:1000px;margin: 0 auto;">
-                              <p class="title">Liên kết vùng</p>
+                              <p class="title">REGIONAL CONNECTIVITY</p>
                               <ul>
-                                <li><span class="num">1</span> Cách trung tâm Thành Phố 22 KM</li>
-                                <li><span class="num">2</span> Cách trung tâm Thủ Dầu Một 5 KM</li>
-                                <li><span class="num">3</span> Cách ngã tư Tân Quy 3 KM</li>
-                                <li><span class="num">4</span> Cách chợ Hóc Môn 10 KM</li>
-                                <li><span class="num">5</span> Cách Đông Thạnh Quận 12 10 KM</li>
-                                <li><span class="num">6</span> Cách quốc lộ 22 14 KM</li>
+                                <li><span class="num">1</span> 22 KM from Ho Chi Minh City center</li>
+                                <li><span class="num">2</span> 5 KM from Thu Dau Mot city center</li>
+                                <li><span class="num">3</span> 3 KM from Tan Quy intersection</li>
+                                <li><span class="num">4</span> 10 KM from Hoc Mon market</li>
+                                <li><span class="num">5</span> 10 KM from Dong Thanh, District 12</li>
+                                <li><span class="num">6</span> 14 KM from National Highway 22</li>
                               </ul>
                             </div>
                           </div>
                         </div>
                       </div>
                         </br>
-                      <h5><span style="color:#0000FF"><strong>IV. MẶT BẰNG KHU DÂN CƯ MINH ANH PARK HILL</strong></span></h5>
+                      <h5><span style="color:#0000FF"><strong>IV. LAYOUT OF MINH ANH PARK HILL RESIDENTIAL AREA</strong></span></h5>
                         </br>
                       <p style="text-align:center"><img alt="" src="/assets/img/bds/minhanh_cuchi_matbang.PNG"></p>
                       <p style="text-align:center"><span style="font-size:12px"><em>Mặt bằng tổng thể Dự án Minh Anh Park Hill</em></span></p>
                         </br>
-                      <h5><span style="color:#0000FF"><strong>V. GIÁ BÁN KHU DÂN C Ư MINH ANH PARK HILL NHƯ THẾ NÀO?</strong></span></h5>
+                      <h5><span style="color:#0000FF"><strong>V. SELLING PRICE OF MINH ANH PARK HILL RESIDENTIAL AREA?</strong></span></h5>
                         </br>
-                      <p>Quỹ đất rộng lớn nên giá đất nền Củ Chi hiện tại ở mức rẻ và hợp lý của Thành Phố Hồ Chí Minh.</p>
-                      <p>Bên cạnh đó, đối tượng khách hàng mà chủ đầu tư <strong>Minh Anh Group</strong> hướng đến là những cư dân trung cấp có mức thu nhập bình quân từ 13 – 15 triệu/hàng tháng nên mức giá dự kiến mà chủ đầu tư <strong>Minh Anh Group</strong> mang đến sẽ vô cùng hấp dẫn.</p>
-
-                      <p>Chính sách hỗ trợ và các ưu đãi khi khách hàng lựa chọn <strong>Minh Anh Park Hill</strong> cũng sẽ được chủ đầu tư chú trọng để cư dân có thể tìm được một nơi an cư tốt nhất.</p>
+                      <p>Large land fund enables the current land prices in Cu Chi to be affordable and reasonable within Ho Chi Minh City.</p>
+                        </br>
+                      <p>In addition, the target customers that <strong>Minh Anh Group</strong> aims for are middle-income residents with an average monthly income ranging from 13 to 15 million VND, so the expected prices offered by <strong>Minh Anh Group</strong> will be very attractive.</p>
+                        </br>
+                      <p>The developer will also focus on providing support policies and various incentives for customers choosing <strong>Minh Anh Park Hill</strong>, ensuring that residents can find the best place for settlement.</p>
                     </div>
                   </div>
                 </div>
