--- a/src/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.ejs
+++ b/src/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.ejs
@@ -55,7 +55,7 @@
                       </div>
                       <div class="post_content_minhanh">
                         <h3>ĐIỀU CHỈNH CHẾ ĐỘ DINH DƯỠNG CHO HEO NÁI TRONG GIAI ĐOẠN CHUYỂN TIẾP KHI SINH</h3>
-                        <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng Sáu | 2020
+                        <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 18 Tháng Tư | 2022
                         </div>
                         <p><strong>Heo con có sức sống tốt hơn sẽ giúp tăng lợi nhuận trong quá trình chăn nuôi. Dựa
                             trên những thí nghiệm gần đây và kết quả thực hiện chương trình dinh dưỡng tiên tiến đã
@@ -187,7 +187,7 @@
                                         href="/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.html">Có
                                         thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ?</a></h4>
                                     <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
-                                      Sáu | 2022</div>
+                                      Mười Một | 2022</div>
                                     <p>Vitamin E có thể được thay thế hoặc tiết kiệm bằng cách sử dụng các chất chống
                                       oxy
                                       hóa khác, nhưng không bao giờ thay thế được hoàn toàn; bài viết này giải thích lý
@@ -210,8 +210,8 @@
                                   <div class="post-text_1">
                                     <h4><a href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html">Kiểm
                                         soát giá trị đệm trong thức ăn heo con</a></h4>
-                                    <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
-                                      Sáu | 2021</div>
+                                    <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 25 Tháng
+                                      Bảy | 2022</div>
                                     <p>Thực tiễn xây dựng khẩu phần thức ăn heo con hiện đại cần tính đến khả năng đệm
                                       của
                                       khẩu phần, mục tiêu kiểm soát khả năng đệm đạt dưới 650 meq/kg. &nbsp; Trong bất
@@ -238,8 +238,8 @@
                                     <h4><a href="/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.html">Điều chỉnh chế
                                         độ dinh dưỡng cho heo nái
                                         trong giai đoạn chuyển tiếp khi sinh</a></h4>
-                                    <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
-                                      Sáu | 2020</div>
+                                    <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 18 Tháng
+                                      Tư | 2022</div>
                                     <p>Heo con có sức sống tốt hơn sẽ giúp tăng lợi nhuận trong quá trình chăn nuôi. Dựa
                                       trên những thí nghiệm gần đây và kết quả thực hiện chương trình dinh dưỡng tiên
                                       tiến
