--- a/src/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.ejs
+++ b/src/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.ejs
@@ -55,7 +55,7 @@
                     </div>
                     <div class="post_content_minhanh">
                       <h3>KIỂM SOÁT GIÁ TRỊ ĐỆM TRONG THỨC ĂN HEO CON</h3>
-                      <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng Sáu | 2021</div>
+                      <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 25 Tháng Bảy | 2022</div>
                       <p><strong>Thực tiễn xây dựng khẩu phần thức ăn heo con hiện đại cần tính đến khả năng đệm của khẩu phần, mục tiêu kiểm soát khả năng đệm đạt dưới 650 meq/kg.</strong></p>
                       <p>&nbsp;</p>
                       <p>Trong bất kỳ hệ thống chăn nuôi heo thâm canh nào cũng có chung một thách thức đó là làm sao chuyển heo con từ giai đoạn bú mẹ sang giai đoạn cai sữa một cách mượt mà nhất để đạt được hiệu quả chăn nuôi tốt. Việc này hoàn toàn không mới và cũng đã được nghiên cứu nhiều, được một số nhà nghiên cứu và nhà chăn nuôi phân tích và tổng hợp. Nói tóm lại thách thức chính đối với heo con trong giai đoạn chuyển đổi này là sự thay đổi môi trường, việc bị trộn lẫn với heo con từ các heo nái khác, loại thức ăn mới và hơn nữa hệ tiêu hóa và hệ miễn dịch chưa trưởng thành.</p>
@@ -96,8 +96,8 @@
                                   <h4><a
                                       href="/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.html">Có
                                       thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ?</a></h4>
-                                  <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
-                                    Sáu | 2022</div>
+                                  <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 28 Tháng
+                                    Mười Một | 2022</div>
                                   <p>Vitamin E có thể được thay thế hoặc tiết kiệm bằng cách sử dụng các chất chống oxy
                                     hóa khác, nhưng không bao giờ thay thế được hoàn toàn; bài viết này giải thích lý do
                                     vì sao vitamin E rất quan trọng đối với&#8230;</p>
@@ -120,8 +120,8 @@
                                   <h4><a
                                       href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html">Kiểm
                                       soát giá trị đệm trong thức ăn heo con</a></h4>
-                                  <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
-                                    Sáu | 2021</div>
+                                  <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 25 Tháng
+                                    Bảy | 2022</div>
                                   <p>Thực tiễn xây dựng khẩu phần thức ăn heo con hiện đại cần tính đến khả năng đệm của
                                     khẩu phần, mục tiêu kiểm soát khả năng đệm đạt dưới 650 meq/kg. &nbsp; Trong bất kỳ
                                     hệ thống chăn nuôi heo thâm canh nào cũng&#8230;</p>
@@ -144,8 +144,8 @@
                                 <div class="post-text_1">
                                   <h4><a href="/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.html">Điều chỉnh chế độ dinh dưỡng cho heo nái
                                       trong giai đoạn chuyển tiếp khi sinh</a></h4>
-                                  <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
-                                    Sáu | 2020</div>
+                                  <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 18 Tháng
+                                    Tư | 2022</div>
                                   <p>Heo con có sức sống tốt hơn sẽ giúp tăng lợi nhuận trong quá trình chăn nuôi. Dựa
                                     trên những thí nghiệm gần đây và kết quả thực hiện chương trình dinh dưỡng tiên tiến
                                     đã khẳng định rằng cải thiện dinh dưỡng cho heo&#8230;</p>
