--- a/src/bds/minh-anh-park-hill-cu-chi.ejs
+++ b/src/bds/minh-anh-park-hill-cu-chi.ejs
@@ -30,7 +30,7 @@
   itemscope itemtype="http://schema.org/WebPage">
   <div class="wrapper">
     <div class="wrapper_inner">
-      <%- include('../partial/header.ejs', { page: 'bat-dong-san' , lang: 'vi' , engPage: 'en/project.html' })
+      <%- include('../partial/header.ejs', { page: 'bat-dong-san' , lang: 'vi' , engPage: '/en/projectdetail/minh-anh-park-hill-cu-chi-en.html' })
         %>
         <div class="content ">
           <div class="content_inner  ">
@@ -91,10 +91,10 @@
                         </br>
                       <h5><span style="color:#0000FF"><strong>III. TIỆN ÍCH XUNG QUANH DỰ ÁN MINH ANH PARK HILL</strong></span></h5>
                         </br>
-                      <p>Theo quy hoạch, nhiều khu giải trí tầm cỡ quốc tế được mở ra tại <strong>Củ Chi</strong>. Hiện tại, khu đô thị Tây Bắc <strong>6.000ha</strong> đang triển khai xây dựng. Công viên Quốc tế Tân Phú Trung quy mô 300ha, làng Đại Học Quốc Tế diện tích 1.000ha tại Tân Phú Trung, Thảo Cầm Viên 500ha tại An Nhơn Tây… và khách sạn, nhà hàng đang mọc ra ngày càng nhiều…</p>
+                      <p>Theo quy hoạch, nhiều khu giải trí tầm cỡ quốc tế được mở ra tại <strong>Củ Chi</strong>. Hiện tại, khu đô thị Tây Bắc <strong>6.000 ha</strong> đang triển khai xây dựng. Công viên Quốc tế Tân Phú Trung quy mô 300 ha, làng Đại Học Quốc Tế diện tích 1.000ha tại Tân Phú Trung, Thảo Cầm Viên 500 ha tại An Nhơn Tây… và khách sạn, nhà hàng đang mọc ra ngày càng nhiều…</p>
                       <p style="text-align:center"><img alt="" src="/assets/img/bds/minhanh_cuchi_tienich.PNG"></p>
                       <p style="text-align:center"><span style="font-size:12px"><em>Tiện ích kết nối khu vực của Minh Anh Park Hill</em></span></p>
-                      <p>Bên cạnh đó, dự kiến sẽ có khoảng 30 trường Đại Học dời về Củ Chi và mỗi trường sẽ cần khoảng 10 đến 30ha đất. Đồng thời với điều đó sẽ có khoảng 30 bệnh viện với quy mô lớn nhỏ khác nhau sẽ được xây dựng mới tại Củ Chi và chỉ có Củ Chi mới đủ diện tích “đất sạch” với cảnh quan phong thủy phù hợp với người Á Đông và tiêu chuẩn quốc tế. Xung quanh là những tiện ích ngoại khu hiện hữu như chợ, siêu thị, trung tâm hành chính, UBND, trung tâm thương mại, siêu thị, trường học, bệnh viện,…Chính vì những tiện nghi “vàng” mà <strong>khu dân cư Minh Anh Park Hill </strong> được hưởng lợi trong tương lai</p>
+                      <p>Bên cạnh đó, dự kiến sẽ có khoảng 30 trường Đại Học dời về Củ Chi và mỗi trường sẽ cần khoảng 10 đến 30 ha đất. Đồng thời với điều đó sẽ có khoảng 30 bệnh viện với quy mô lớn nhỏ khác nhau sẽ được xây dựng mới tại Củ Chi và chỉ có Củ Chi mới đủ diện tích “đất sạch” với cảnh quan phong thủy phù hợp với người Á Đông và tiêu chuẩn quốc tế. Xung quanh là những tiện ích ngoại khu hiện hữu như chợ, siêu thị, trung tâm hành chính, UBND, trung tâm thương mại, siêu thị, trường học, bệnh viện,…Chính vì những tiện nghi “vàng” mà <strong>khu dân cư Minh Anh Park Hill </strong> được hưởng lợi trong tương lai</p>
                         </br>
                       <div class="bg_lienketvung">
                         <div class="row row-full-width align-middle align-center">
@@ -130,7 +130,7 @@
                       <p style="text-align:center"><img alt="" src="/assets/img/bds/minhanh_cuchi_matbang.PNG"></p>
                       <p style="text-align:center"><span style="font-size:12px"><em>Mặt bằng tổng thể Dự án Minh Anh Park Hill</em></span></p>
                         </br>
-                      <h5><span style="color:#0000FF"><strong>V. GIÁ BÁN KHU DÂN C Ư MINH ANH PARK HILL NHƯ THẾ NÀO?</strong></span></h5>
+                      <h5><span style="color:#0000FF"><strong>V. GIÁ BÁN KHU DÂN CƯ MINH ANH PARK HILL NHƯ THẾ NÀO?</strong></span></h5>
                         </br>
                       <p>Quỹ đất rộng lớn nên giá đất nền Củ Chi hiện tại ở mức rẻ và hợp lý của Thành Phố Hồ Chí Minh.</p>
                       <p>Bên cạnh đó, đối tượng khách hàng mà chủ đầu tư <strong>Minh Anh Group</strong> hướng đến là những cư dân trung cấp có mức thu nhập bình quân từ 13 – 15 triệu/hàng tháng nên mức giá dự kiến mà chủ đầu tư <strong>Minh Anh Group</strong> mang đến sẽ vô cùng hấp dẫn.</p>
