--- a/src/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.ejs
+++ b/src/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.ejs
@@ -55,7 +55,7 @@
                     </div>
                     <div class="post_content_minhanh">
                       <h3>Có thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ?</h3>
-                      <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng Sáu | 2022</div>
+                      <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 28 Tháng Mười Một | 2022</div>
                       <div class="shadfresocial"><strong>Vitamin E có thể được thay thế hoặc tiết kiệm bằng cách sử dụng các chất chống oxy hóa khác, nhưng không bao giờ thay thế được hoàn toàn; bài viết này giải thích lý do vì sao vitamin E rất quan trọng đối với sức khỏe và sự tăng trưởng của động vật.</strong></div>
                       <div class="noidung-s">
                       <p>Vitamin E là một loại vitamin đắt tiền, có thời điểm vitamin này rất đắt đỏ. Do vậy, hầu hết các nhà sản xuất premix và thức ăn chăn nuôi duy trì bổ sung vitamin E dưới sự kiểm soát nghiêm ngặt. Nhiều năm kinh nghiệm làm việc với vai trò là một chuyên gia dinh dưỡng thực địa, tôi nhận thấy trong thức ăn chỉ chứa một nửa lượng vitamin E so với khuyến cáo của Hội đồng nghiên cứu quốc gia (NRC) dành cho động vật dạ dày đơn.</p>
@@ -98,8 +98,8 @@
                                     <h4><a
                                         href="/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.html">Có
                                         thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ?</a></h4>
-                                    <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
-                                      Sáu | 2022</div>
+                                    <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 28 Tháng
+                                      Mười Một | 2022</div>
                                     <p>Vitamin E có thể được thay thế hoặc tiết kiệm bằng cách sử dụng các chất chống oxy
                                       hóa khác, nhưng không bao giờ thay thế được hoàn toàn; bài viết này giải thích lý do
                                       vì sao vitamin E rất quan trọng đối với&#8230;</p>
@@ -122,8 +122,8 @@
                                     <h4><a
                                         href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html">Kiểm
                                         soát giá trị đệm trong thức ăn heo con</a></h4>
-                                    <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
-                                      Sáu | 2021</div>
+                                    <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 25 Tháng
+                                      Bảy | 2022</div>
                                     <p>Thực tiễn xây dựng khẩu phần thức ăn heo con hiện đại cần tính đến khả năng đệm của
                                       khẩu phần, mục tiêu kiểm soát khả năng đệm đạt dưới 650 meq/kg. &nbsp; Trong bất kỳ
                                       hệ thống chăn nuôi heo thâm canh nào cũng&#8230;</p>
@@ -146,8 +146,8 @@
                                   <div class="post-text_1">
                                     <h4><a href="/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.html">Điều chỉnh chế độ dinh dưỡng cho heo nái
                                         trong giai đoạn chuyển tiếp khi sinh</a></h4>
-                                    <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
-                                      Sáu | 2020</div>
+                                    <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 18 Tháng
+                                      Tư | 2022</div>
                                     <p>Heo con có sức sống tốt hơn sẽ giúp tăng lợi nhuận trong quá trình chăn nuôi. Dựa
                                       trên những thí nghiệm gần đây và kết quả thực hiện chương trình dinh dưỡng tiên tiến
                                       đã khẳng định rằng cải thiện dinh dưỡng cho heo&#8230;</p>
