align header logo centered vertically on desktop, mobile

--- a/src/assets/css/index3.css
+++ b/src/assets/css/index3.css
@@ -854,6 +854,7 @@ footer #lang_sel_click ul ul a:visited {
     position: relative;
     top: auto;
     vertical-align: middle;
+    margin-top: 5px;
   }
 
   .q_logo a {
