--- a/src/en/about.ejs
+++ b/src/en/about.ejs
@@ -422,7 +422,7 @@
                             <p>- The Human Resources Department focuses on developing talented human resources and creating a favorable working environment.</p>
                             <p>- The Market Research Department provides valuable market analysis to shape business strategies.</p>
                           </br>
-                            <p>With a professional organizational structure and the passion of our team, Minh Anh Company is confident in becoming a leading technology investment company, delivering high value to customers and shareholders.</p>
+                            <p>With a professional organizational structure and the passion of our team, Minh Anh Group is confident in becoming a leading technology investment company, delivering high value to customers and shareholders.</p>
                           </div>
                         </div>
                       </div>
