--- a/src/en/projectdetail/minh-anh-park-hill-cu-chi-en.ejs
+++ b/src/en/projectdetail/minh-anh-park-hill-cu-chi-en.ejs
@@ -75,7 +75,7 @@
                         </br>
                         <p>- Project name:&nbsp;<strong>Minh Anh Park Hill</strong></p>
                         <p>- Location: Provincial Road 8, Hoa Phu Commune, Cu Chi District, Ho Chi Minh City, Vietnam</p>
-                        <p>- Developer: <strong>Minh Anh Technology Investment Joint Stock Company</strong></p>
+                        <p>- Investor: <strong>Minh Anh Technology Investment Joint Stock Company</strong></p>
                         <p>- Design consultant: Saigon QTK Construction Design Consultancy Company Limited</p>
                         <p>- Main distributor: </p>
                         <p>- Total area: 2.2 hectares</p>
@@ -87,7 +87,7 @@
                       <p><strong>Advantages of Minh Anh Park Hill Project:</strong></p>
                         </br>
                       <p>- This product line offers prices that are suitable for the budget of many middle-income residents.</p>
-                      <p>- The developer is reputable, well-established, financially strong, and experienced in real estate development.</p>
+                      <p>- The investor is reputable, well-established, financially strong, and experienced in real estate development.</p>
                       
                       <p>- Despite being townhouses, commercial townhouses, and shophouses in Cu Chi with lower prices compared to many other projects, the quality and amenities are equally well-integrated, not inferior to high-end townhouse and residential projects.</p>
                       <!-- <p style="text-align:center"><img alt="" src="/assets/img/bds/minhanh_cuchi_phoicanh.PNG"></p>
@@ -140,7 +140,7 @@
                       <h5><span style="color:#0000FF"><strong>IV. LAYOUT OF MINH ANH PARK HILL RESIDENTIAL AREA</strong></span></h5>
                         </br>
                       <p style="text-align:center"><img alt="" src="/assets/img/bds/minhanh_cuchi_matbang.PNG"></p>
-                      <p style="text-align:center"><span style="font-size:12px"><em>Mặt bằng tổng thể Dự án Minh Anh Park Hill</em></span></p>
+                      <p style="text-align:center"><span style="font-size:12px"><em>Overall layout of Minh Anh Park Hill Project</em></span></p>
                         </br>
                       <h5><span style="color:#0000FF"><strong>V. SELLING PRICE OF MINH ANH PARK HILL RESIDENTIAL AREA?</strong></span></h5>
                         </br>
@@ -148,7 +148,7 @@
                         </br>
                       <p>In addition, the target customers that <strong>Minh Anh Group</strong> aims for are middle-income residents with an average monthly income ranging from 13 to 15 million VND, so the expected prices offered by <strong>Minh Anh Group</strong> will be very attractive.</p>
                         </br>
-                      <p>The developer will also focus on providing support policies and various incentives for customers choosing <strong>Minh Anh Park Hill</strong>, ensuring that residents can find the best place for settlement.</p>
+                      <p>The investor will also focus on providing support policies and various incentives for customers choosing <strong>Minh Anh Park Hill</strong>, ensuring that residents can find the best place for settlement.</p>
                     </div>
                   </div>
                 </div>
