--- a/src/en/news/dieu-chinh-che-do-dinh-duong-cho-heo-nai-en.ejs
+++ b/src/en/news/dieu-chinh-che-do-dinh-duong-cho-heo-nai-en.ejs
@@ -43,7 +43,7 @@
               <div class="blog_single blog_holder">
                 <article id="post-393"
                   class="post-393 post type-post status-publish format-standard has-post-thumbnail hentry category-kien-thuc-chan-nuoi">
-                  <div class="post_detail_vietacc">
+                  <div class="post_detail_minhanh">
                     <div class="banner_post">
                       <div class="img_post">
                         <img src="/assets/img/tin-tuc/banner.png">
