- update about content

--- a/src/en/about.ejs
+++ b/src/en/about.ejs
@@ -413,8 +413,7 @@
                             <h3>ORGANIZATIONAL STRUCTURE</h3>
                             <p>Minh Anh Group is a diversified investment corporation with a professional and efficient organizational structure.</p>
                             <p>- The Board of Directors is responsible for supervising and directing the company's strategic development.</p>                          
-                            <p>- The CEO leads the company with a strategic vision and strong leadership.</p>
-                          </br>
+                            <p>- The CEO leads the company with a strategic vision and strong leadership.</p>                          
                             <p>- The Project Department is responsible for managing and implementing the company's projects.</p>
                             <p>- The Technical Department focuses on researching, developing, and applying advanced technologies.</p>
                             <p>- The Finance and Accounting Department ensures effective financial management and transparent financial reporting.</p>
@@ -422,7 +421,7 @@
                             <p>- The Human Resources Department focuses on developing talented human resources and creating a favorable working environment.</p>
                             <p>- The Market Research Department provides valuable market analysis to shape business strategies.</p>
                           </br>
-                            <p>With a professional organizational structure and the passion of our team, Minh Anh Group is confident in becoming a leading technology investment company, delivering high value to customers and shareholders.</p>
+                            <p>With a professional organizational structure and the passion of our team, Minh Anh Group is confident in becoming a leading company in the field of agriculture and project development, delivering high value to customers and shareholders.</p>
                           </div>
                         </div>
                       </div>
