--- a/src/gioi-thieu.ejs
+++ b/src/gioi-thieu.ejs
@@ -412,8 +412,7 @@
                             <h3>Cơ cấu tổ chức</h3>
                             <p>Công ty Minh Anh là một công ty cổ phần đầu tư đa ngành với cơ cấu tổ chức chuyên nghiệp và hiệu quả.</p>
                             <p>- Hội đồng quản trị chịu trách nhiệm giám sát và định hướng chiến lược phát triển.</p>                          
-                            <p>- Ban Tổng Giám đốc dẫn dắt công ty với tầm nhìn chiến lược và tinh thần lãnh đạo mạnh mẽ. </p>
-                          </br>
+                            <p>- Ban Tổng Giám đốc dẫn dắt công ty với tầm nhìn chiến lược và tinh thần lãnh đạo mạnh mẽ. </p>                          
                             <p>- Phòng Dự án chịu trách nhiệm quản lý và triển khai các dự án của công ty.</p>
                             <p>- Phòng Kỹ thuật tập trung vào nghiên cứu, phát triển và áp dụng các công nghệ tiên tiến.</p>
                             <p>- Phòng Tài chính Kế toán đảm bảo quản lý tài chính hiệu quả và báo cáo tài chính minh bạch.</p>
@@ -421,7 +420,7 @@
                             <p>- Phòng Nhân sự tập trung vào phát triển nguồn nhân lực tài năng và tạo môi trường làm việc thuận lợi.</p>
                             <p>- Phòng Nghiên cứu thị trường cung cấp thông tin phân tích thị trường hữu ích giúp định hình chiến lược kinh doanh.</p>
                           </br>
-                            <p>Với cơ cấu tổ chức chuyên nghiệp và sự đam mê của đội ngũ, Công ty Minh Anh tự tin vươn lên thành công ty hàng đầu trong lĩnh vực đầu tư công nghệ và đem lại giá trị cao cho khách hàng và cổ đông.</p>
+                            <p>Với cơ cấu tổ chức chuyên nghiệp và sự đam mê của đội ngũ, Công ty Minh Anh tự tin vươn lên thành công ty hàng đầu trong lĩnh vực nông nghiệp và phát triển dự án đem lại giá trị cao cho khách hàng và cổ đông.</p>
                           </div>
                         </div>
                       </div>
