change name to CORPORATION

--- a/src/en/projectdetail/minh-anh-park-hill-cu-chi-en.ejs
+++ b/src/en/projectdetail/minh-anh-park-hill-cu-chi-en.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>MINH ANH TECHNOLOGY INVESTMENT JOINT STOCK COMPANY - 6 STEPS IN FORMULATING LIVESTOCK FEED</title>
+  <title>MINH ANH TECHNOLOGY INVESTMENT CORPORATION - 6 STEPS IN FORMULATING LIVESTOCK FEED</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta property="og:locale" content="vi_VN" />
   <meta property="og:type" content="article" />
@@ -68,14 +68,14 @@
                 <div class="project-detail">
                   <div class="grid_section">
                     <div class="section_inner">
-                      <p><strong>Minh Anh Park Hill</strong>, developed by <strong> Minh Anh Technology Investment Joint Stock Company</strong> , covers an area of approximately 2.2 hectares situated in Hoa Phu Commune, Cu Chi District, Ho Chi Minh City. According to the master plan, <strong>Minh Anh Park Hill</strong> will be a mixed-use project comprising of service, commercial, cultural, and recreational facilities in the Northwest Saigon area.</p>
+                      <p><strong>Minh Anh Park Hill</strong>, developed by <strong> MINH ANH TECHNOLOGY INVESTMENT CORPORATION</strong> , covers an area of approximately 2.2 hectares situated in Hoa Phu Commune, Cu Chi District, Ho Chi Minh City. According to the master plan, <strong>Minh Anh Park Hill</strong> will be a mixed-use project comprising of service, commercial, cultural, and recreational facilities in the Northwest Saigon area.</p>
                       <p style="text-align:center"><img alt="" src="/assets/img/bds/minhanh_cuchi_duan.PNG"></p>
                       <p style="text-align:center"><span style="font-size:12px"><em>Minh Anh Park Hill Residential Area</em></span></p>
                       <h5><span style="color:#0000FF"><strong>I. MINH ANH PARK HILL PROJECT</strong></span></h5>
                         </br>
                         <p>- Project name:&nbsp;<strong>Minh Anh Park Hill</strong></p>
                         <p>- Location: Provincial Road 8, Hoa Phu Commune, Cu Chi District, Ho Chi Minh City, Vietnam</p>
-                        <p>- Investor: <strong>Minh Anh Technology Investment Joint Stock Company</strong></p>
+                        <p>- Investor: <strong>MINH ANH TECHNOLOGY INVESTMENT CORPORATION</strong></p>
                         <p>- Design consultant: Saigon QTK Construction Design Consultancy Company Limited</p>
                         <p>- Main distributor: </p>
                         <p>- Total area: 2.2 hectares</p>
