--- a/src/partial/header.ejs
+++ b/src/partial/header.ejs
@@ -139,7 +139,7 @@
                      
                 </div>
                 <div class="company-text">
-                  <p class="company-name">MINH ANH TECHNOLOGY INVESTMENT JOINT STOCK COMPANY</p>
+                  <p class="company-name">MINH ANH TECHNOLOGY INVESTMENT CORPORATION</p>
                 </div>
               </div>
             </div>
