--- a/src/en/news/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi-en.ejs
+++ b/src/en/news/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi-en.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>MINH ANH TECHNOLOGY INVESTMENT JOINT STOCK COMPANY - 6 STEPS IN FORMULATING LIVESTOCK FEED</title>
+  <title>MINH ANH TECHNOLOGY INVESTMENT CORPORATION - 6 STEPS IN FORMULATING LIVESTOCK FEED</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta property="og:locale" content="vi_VN" />
   <meta property="og:type" content="article" />
