--- a/src/en/news/dieu-chinh-che-do-dinh-duong-cho-heo-nai-en.ejs
+++ b/src/en/news/dieu-chinh-che-do-dinh-duong-cho-heo-nai-en.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>MINH ANH TECHNOLOGY INVESTMENT JOINT STOCK COMPANY - ADJUSTING NUTRITION FOR SOWS DURING THE FARROWING TRANSITION PHASE</title>
+  <title>MINH ANH TECHNOLOGY INVESTMENT CORPORATION - ADJUSTING NUTRITION FOR SOWS DURING THE FARROWING TRANSITION PHASE</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta property="og:locale" content="vi_VN" />
   <meta property="og:type" content="article" />
