- add payment page

--- a/src/partial/header.ejs
+++ b/src/partial/header.ejs
@@ -86,6 +86,10 @@
                     href="/lien-he.html" class="<%= page === 'lien-he' ? 'current' : '' %>"><span>Liên Hệ</span></a><span
                     class="mobile_arrow"><i class="fa fa-angle-right"></i><i class="fa fa-angle-down"></i></span>
                 </li>
+                <li id="mobile-menu-item-294" class="menu-item menu-item-type-post_type menu-item-object-page <%= page === 'thanh-toan' ? 'current-menu-item page_item current_page_item active' : '' %>"><a
+                  href="/thanh-toan.html" class="<%= page === 'thanh-toan' ? 'current' : '' %>"><span>Thanh Toán</span></a><span
+                  class="mobile_arrow"><i class="fa fa-angle-right"></i><i class="fa fa-angle-down"></i></span>
+              </li>
               </ul>
             </nav>
           </div>
@@ -111,6 +115,8 @@
           <li id="nav-menu-item-94" class="menu-item menu-item-type-post_type menu-item-object-page  narrow <%= page === 'lien-he' ? 'current-menu-item current_page_item active' : '' %>"><a
               href="/lien-he.html" class="<%= page === 'lien-he' ? 'current' : '' %>"><i class="menu_icon blank fa"></i><span>Liên
                 Hệ</span><span class="plus"></span></a></li>
+                <li id="nav-menu-item-294" class="menu-item menu-item-type-post_type menu-item-object-page  narrow <%= page === 'thanh-toan' ? 'current-menu-item current_page_item active' : '' %>"><a
+                  href="/thanh-toan.html" class="<%= page === 'thanh-toan' ? 'current' : '' %>"><i class="menu_icon blank fa"></i><span>Thanh Toán</span><span class="plus"></span></a></li>
         </ul>
       </div>
     </div>
@@ -203,6 +209,10 @@
                     href="/en/contact.html" class="<%= page === 'contact' ? 'current' : '' %>"><span>Contact</span></a><span
                     class="mobile_arrow"><i class="fa fa-angle-right"></i><i class="fa fa-angle-down"></i></span>
                 </li>
+                <li id="mobile-menu-item-457" class="menu-item menu-item-type-post_type menu-item-object-page <%= page === 'payment' ? 'current-menu-item page_item current_page_item active' : '' %>"><a
+                  href="/en/payment.html" class="<%= page === 'payment' ? 'current' : '' %>"><span>Payment</span></a><span
+                  class="mobile_arrow"><i class="fa fa-angle-right"></i><i class="fa fa-angle-down"></i></span>
+              </li>
               </ul>
             </nav>
           </div>
@@ -228,6 +238,9 @@
           <li id="nav-menu-item-467" class="menu-item menu-item-type-post_type menu-item-object-page  narrow <%= page === 'contact' ? 'current-menu-item current_page_item active' : '' %>"><a
               href="/en/contact.html" class="<%= page === 'contact' ? 'current' : '' %>"><i
                 class="menu_icon blank fa"></i><span>Contact</span><span class="plus"></span></a></li>
+                <li id="nav-menu-item-567" class="menu-item menu-item-type-post_type menu-item-object-page  narrow <%= page === 'payment' ? 'current-menu-item current_page_item active' : '' %>"><a
+                  href="/en/payment.html" class="<%= page === 'payment' ? 'current' : '' %>"><i
+                    class="menu_icon blank fa"></i><span>Payment</span><span class="plus"></span></a></li>
         </ul>
       </div>
     </div>
